# anoptic-musicgen

./: .gitignore  README.md  REFINEMENT_PLAN.md  SYNTHESIS.md  improvements.md  pyproject.toml
demos/: common.py  demo_axes.py  demo_dissonance.py  demo_instruments.py  demo_journey.py  demo_live.py  demo_meters.py  demo_modifiers.py  demo_modulation.py  demo_motif.py  demo_payoff.py  demo_perform.py  demo_seeds.py  demo_signatures.py  demo_synth.py  demo_tension.py  demo_texture.py  demo_voices.py  export_fixture.py  m0_smoke.py  m1_harmony.py  m2_full.py
musicgen/: __init__.py  audition.py  clock.py  ir.py  live.py  midi_io.py  rng.py  textdump.py  verify.py
musicgen/control/: __init__.py  automation.py  levers.py  mapping.py
musicgen/modifiers/: __init__.py
musicgen/playground/: __init__.py  __main__.py  server.py  state.py  telemetry.py
musicgen/synth/: __init__.py  (+3 more)
tests/: test_apex.py  test_automation.py  test_chords.py  test_clock.py  test_conductor.py  test_console.py  test_counterpoint.py  test_dramaturg.py  test_form.py  test_groove.py  test_harmony.py  test_instruments.py  test_levers.py  test_live.py  test_mapping.py  test_melody.py  test_meters.py  test_midi_io.py  test_modifiers.py  test_modulation.py  test_motif.py  test_obligations.py  test_perc_arp.py  test_perform.py  test_pitch.py  test_playground.py  test_rhythm.py  test_rng.py  test_scales.py  test_signatures.py  test_structure.py  test_synth.py  test_texture.py  test_ties.py  test_verify.py  test_voices.py  test_voicing.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+40 files in other folders)
