[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musicgen"
version = "0.0.1"
description = "Theory-driven procedural music prototype for the Anoptic engine"
requires-python = ">=3.12"
dependencies = ["mido>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=8"]
live = ["python-rtmidi>=1.5"]
synth = ["signalflow>=0.5"]

[tool.setuptools.packages.find]
include = ["musicgen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
